test/org/midica/testfiles/failing/inc/st-incl-3.midica





INCLUDE  st-incl-2.midica


FUNCTION test3

	CALL test1(/4)
	
	CALL test2(dur=/2,l1=bbb,??)
	
END